@@ -8,3 +8,4 @@ evaluation.
 Thanks to Luke Tierney for helpful conversations regarding 
 lazy evaluation and promises in R.
 
+Thanks to Matthias Burger for providing full argument patch.
